crates/diffo-e2e/tests/snapshots/real_git_state__conflicted_file.snap
---
source: crates/diffo-e2e/tests/real_git_state.rs
expression: collect(&repo.worktree)?
---
RepositorySnapshot(
  head: Named(
    name: "main",
    commit: "cd7cdc6bb20e7734bb385385ac9c9b66b2355091",
  ),
  files: [
    FileState(
      path: "tracked.txt",
      old_path: None,
      kind: Conflicted,
      staged: None,
      unstaged: Some(FileDiff(
        text: "@@ -0,0 +1,5 @@\n+<<<<<<< HEAD\n+local version\n+=======\n+remote version\n+>>>>>>> origin/main\n",
      )),
    ),
  ],
  recent_commits: [
    Commit(
      id: "cd7cdc6bb20e7734bb385385ac9c9b66b2355091",
      summary: "Local edit",
    ),
    Commit(
      id: "4808d4013094be7c3fb50d5089f8e72193967c32",
      summary: "Base commit",
    ),
  ],
  upstream: Some(UpstreamState(
    name: "origin/main",
    ahead: 1,
    behind: 1,
    recent_local_commits: [
      Commit(
        id: "cd7cdc6bb20e7734bb385385ac9c9b66b2355091",
        summary: "Local edit",
      ),
    ],
  )),
)
