crates/diffo-e2e/tests/snapshots/real_git_state__ignored_file_is_not_reported.snap
---
source: crates/diffo-e2e/tests/real_git_state.rs
expression: collect(&repo.worktree)?
---
RepositorySnapshot(
  branch: BranchState(
    name: Some("main"),
  ),
  files: [],
  recent_commits: [
    Commit(
      id: "2f2f621b6b19ec8f7a241b03b37eeb2c1c3cb2bd",
      summary: "Add ignore rule",
    ),
    Commit(
      id: "4808d4013094be7c3fb50d5089f8e72193967c32",
      summary: "Base commit",
    ),
  ],
  upstream: Some(UpstreamState(
    name: "origin/main",
    ahead: 1,
    behind: 0,
  )),
)
