crates/diffo-e2e/tests/snapshots/real_git_state__local_branch_is_ahead_of_upstream.snap
---
source: crates/diffo-e2e/tests/real_git_state.rs
expression: collect(&repo.worktree)?
---
RepositorySnapshot(
  branch: BranchState(
    name: Some("main"),
  ),
  files: [],
  recent_commits: [
    Commit(
      id: "43d9e3e5b952193a00febda8eabb8fda9b45306f",
      summary: "Local commit",
    ),
    Commit(
      id: "4808d4013094be7c3fb50d5089f8e72193967c32",
      summary: "Base commit",
    ),
  ],
  upstream: Some(UpstreamState(
    name: "origin/main",
    ahead: 1,
    behind: 0,
  )),
)
