crates/diffo-e2e/tests/snapshots/real_git_state__same_file_has_staged_and_unstaged_changes.snap
---
source: crates/diffo-e2e/tests/real_git_state.rs
expression: collect(&repo.worktree)?
---
RepositorySnapshot(
  head: Named(
    name: "main",
    commit: "4808d4013094be7c3fb50d5089f8e72193967c32",
  ),
  files: [
    FileState(
      path: "tracked.txt",
      old_path: None,
      kind: Modified,
      staged: Some(FileDiff(
        text: "diff --git a/tracked.txt b/tracked.txt\nindex df967b9..12caafd 100644\n--- a/tracked.txt\n+++ b/tracked.txt\n@@ -1 +1,2 @@\n base\n+staged\n",
      )),
      unstaged: Some(FileDiff(
        text: "diff --git a/tracked.txt b/tracked.txt\nindex 12caafd..913ae38 100644\n--- a/tracked.txt\n+++ b/tracked.txt\n@@ -1,2 +1,3 @@\n base\n staged\n+unstaged\n",
      )),
    ),
  ],
  recent_commits: [
    Commit(
      id: "4808d4013094be7c3fb50d5089f8e72193967c32",
      summary: "Base commit",
    ),
  ],
  upstream: Some(UpstreamState(
    name: "origin/main",
    ahead: 0,
    behind: 0,
  )),
)
