crates/diffo-e2e/tests/snapshots/real_git_state__staged_binary_file.snap
---
source: crates/diffo-e2e/tests/real_git_state.rs
expression: collect(&repo.worktree)?
---
RepositorySnapshot(
  branch: BranchState(
    name: Some("main"),
  ),
  files: [
    FileState(
      path: "image.bin",
      old_path: None,
      kind: Added,
      staged: Some(FileDiff(
        text: "diff --git a/image.bin b/image.bin\nnew file mode 100644\nindex 0000000..5086790\nBinary files /dev/null and b/image.bin differ\n",
      )),
      unstaged: None,
    ),
  ],
  recent_commits: [
    Commit(
      id: "4808d4013094be7c3fb50d5089f8e72193967c32",
      summary: "Base commit",
    ),
  ],
  upstream: Some(UpstreamState(
    name: "origin/main",
    ahead: 0,
    behind: 0,
  )),
)
