crates/diffo-e2e/tests/snapshots/real_git_state__unborn_repository_with_untracked_file.snap
---
source: crates/diffo-e2e/tests/real_git_state.rs
expression: collect(root.path())?
---
RepositorySnapshot(
  branch: BranchState(
    name: Some("main"),
  ),
  files: [
    FileState(
      path: "first file.txt",
      old_path: None,
      kind: Untracked,
      staged: None,
      unstaged: None,
    ),
  ],
  recent_commits: [],
  upstream: None,
)
